nova (2012.1~e3~20120120.12170-0ubuntu1) UNRELEASED; urgency=low

  [Chuck short]
  * debian/patches/fix-nova-rootwraper-env.patch: Dropped
    no longer needed.
  * debian/nova-compute-{kvm,xen,uml,lxc}.conf: Add the connection
    type "--connection=libvirt" since libvirt is no longer the default.


  [Adam Gandelman]
  * debian/nova.conf: Define connection_type=libvirt in common nova.conf
    instead of nova-compute-*.conf until Bug #921294 is addressed.

 -- Chuck Short <zulcss@ubuntu.com>  Tue, 24 Jan 2012 14:48:24 -0500

nova (2012.1~e3~20120120.12170-0ubuntu1) precise; urgency=low

  [Chuck Short]
  * New upstream version.
  * debian/nova-vncproxy.install, debian/nova-vncproxy.upstart.in:
    nova-vncproxy becomes nova-xvpvncproxy.
  * debian/nova.conf: Really use the nova rootwrapper. (LP: #918179)
  * debian/nova_sudoers: Fix typo in rootwrap usage.
  * debian/patches/kombu_tests_timeout.patch: Skip 
    "test_iterconsume_errors_will_reconnect" test.

  [Dan Prince]
  * Add policy.json to packages.

  [Thierry Carrez]
   * debian/*.pyinstall: Ship filter files in each node... (LP: #919105)
   * debian/python-nova.pyremove: ...and no longer in python-nova (LP: #919105)
   * debian/patches/fix-nova-rootwraper-env.patch: Fix temporary issue with 
     nova-rootwrap and nova-compute.

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 20 Jan 2012 11:54:15 -0500

nova (2012.1~e3~20120113.12049-0ubuntu1) precise; urgency=low

  [Chuck Short]
  * New upstream version.
  * debian/nova_sudoers, debian/nova-common.install, 
    Switch out to nova-rootwrap. (LP: #681774)
  * Add "get-origsource-git" which allows developers to 
    generate a tarball from github, by doing:
    fakeroot debian/rules get-orig-source-git
  * debian/debian/nova-objectstore.logrotate: Dont determine
    if we are running Debian or Ubuntu. (LP: #91379)

  [Adam Gandleman]
  * Removed python-nova.postinst, let dh_python2 generate instead since
    python-support is not a dependency. (LP: #907543)
