@@ -246,6 +246,26 @@ Description: OpenStack Compute - compute node (KVM)
  .
  Install this package on your compute nodes if you're using kvm.
 
+Package: nova-cert
+Architecture: all
+Depends: ${ostack-lsb-base}, nova-common (= ${binary:Version}), ${python:Depends}, ${misc:Depends}
+Description: OpenStack Compute - virtual machine scheduler
+ OpenStack is a reliable cloud infrastructure. Its mission is to produce
+ the ubiquitous cloud computing platform that will meet the needs of public
+ and private cloud providers regardless of size, by being simple to implement
+ and massively scalable.
+ .
+ OpenStack Compute, codenamed Nova, is a cloud computing fabric controller. In
+ addition to its "native" API (the OpenStack API), it also supports the Amazon
+ EC2 API.
+ .
+ Nova is intended to be modular and easy to extend and adapt. It supports many
+ different hypervisors (KVM and Xen to name a few), different database backends
+ (SQLite, MySQL, and PostgreSQL, for instance), different types of user
+ databases (LDAP or SQL), etc.
+ .
+ This is the Nova certificate management component.
+
 Package: nova-scheduler
 Architecture: all
 Depends: ${ostack-lsb-base}, nova-common (= ${binary:Version}), ${python:Depends}, ${misc:Depends}
@@ -414,7 +434,7 @@ Description: OpenStack Compute - Console
  (SQLite, MySQL, and PostgreSQL, for instance), different types of user
  databases (LDAP or SQL), etc.
  .
- This package provides the console server.  This enables the use of consoles 
+ This package provides the console server.  This enables the use of consoles
  to be used along with XVP and XenServer.  It is a publically reachable
  component which proxies access to VNCs running on compute nodes.
 
