@@ -1,0 +1,20 @@
+.TH nova\-cert 8
+.SH NAME
+nova\-cert \- Manages x509 certificates for Nova
+
+.SH SYNOPSIS
+.B nova\-cert
+.B \-\-flagfile=<flagfilepath>
+
+.SH DESCRIPTION
+.B nova\-cert
+
+This man page is a stub. Please contribute.
+
+.SH PARAMETERS
+
+.LP
+.B \-\-flagfile=<flagfilepath>
+.IP
+
+Path to the file containing options.
