@@ -1,0 +1,4 @@
+/var/log/nova/nova-cert.log {
+    daily
+    missingok
+}
