@@ -1,0 +1,18 @@
+description "Nova cert"
+author "Soren Hansen <soren@linux2go.dk>"
+
+start on (filesystem and net-device-up IFACE!=lo)
+stop on runlevel [016]
+
+
+chdir /var/run
+
+pre-start script
+	mkdir -p /var/run/nova
+	chown nova:root /var/run/nova/
+
+	mkdir -p /var/lock/nova
+	chown nova:root /var/lock/nova/
+end script
+
+exec su -c "nova-cert --flagfile=/etc/nova/nova.conf" nova
